--- a/index.html
+++ b/index.html
@@ -1,76 +1,67 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="MT7630E : Modified easy installation package">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>MT7630E</title>
+    <title>MT7630E by mdjahidulhamid</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mdjahidulhamid/MT7630E">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>MT7630E</h1>
+        <h2>Modified easy installation package</h2>
 
-          <h1 id="project_title">MT7630E</h1>
-          <h2 id="project_tagline">Modified easy installation package</h2>
+        <section id="downloads">
+          <a href="https://github.com/mdjahidulhamid/MT7630E/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/mdjahidulhamid/MT7630E/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/mdjahidulhamid/MT7630E" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/mdjahidulhamid/MT7630E/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/mdjahidulhamid/MT7630E/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-my-personal-repository" class="anchor" href="#welcome-to-my-personal-repository"><span class="octicon octicon-link"></span></a>Welcome to My Personal repository</h3>
+    <div class="container">
+      <section id="main_content">
+        <h1>
+<a name="welcome-to-my-personal-repository" class="anchor" href="#welcome-to-my-personal-repository"><span class="octicon octicon-link"></span></a>Welcome to My Personal Repository</h1>
 
 <p>This package is for public use and released under GPL v2 license. You can use it or redustribute it under the licensing terms of GPL v2 license agreement.</p>
 
-<pre><code>
+<h2>
+<a name="component" class="anchor" href="#component"><span class="octicon octicon-link"></span></a>Component</h2>
 
-1. Component
-
-    rt2x00: Wi-Fi driver source code
-    btloader: Bluetooth firmware loader source code
-    firmware: Firmware binary code (MT7650E234.bin is for Wi-Fi, mt76x0.bin is for Bluetooth)
-
-2. User Environment
-
-    OS version: Ubuntu 14.04 LTS / Linux Mint 17 LTS
-    Linux kernel version: 3.13 and 3.14
-
-3. Installation
-
-Run the install.sh file in terminal :
-
-./install.sh
-
-Put your password and wait to finish the process
-
-The driver will automatically load at startup.... 
+<pre><code>rt2x00: Wi-Fi driver source code
+btloader: Bluetooth firmware loader source code
+firmware: Firmware binary code (MT7650E234.bin is for Wi-Fi, mt76x0.bin is for Bluetooth)
 </code></pre>
+
+<h2>
+<a name="user-environment" class="anchor" href="#user-environment"><span class="octicon octicon-link"></span></a>User Environment</h2>
+
+<pre><code>OS version: Ubuntu 14.04 LTS / Linux Mint 17 LTS
+Linux kernel version: 3.13 and 3.14
+</code></pre>
+
+<h2>
+<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
+
+<p>Run the install.sh file in terminal :</p>
+
+<pre><code>./install.sh
+</code></pre>
+
+<p>Put your password and wait to finish the process</p>
+
+<p>The driver will automatically load at startup.... </p>
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">MT7630E maintained by <a href="https://github.com/mdjahidulhamid">mdjahidulhamid</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
     
-
   </body>
 </html>
