--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="downloads">
           <a href="https://github.com/mdjahidulhamid/MT7630E/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/mdjahidulhamid/MT7630E/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/mdjahidulhamid/MT7630E" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/mdjahidulhamid/MT7630E" class="btn btn-github"><span class="icon"></span>Find on GitHub</a>
         </section>
       </div>
     </header>
@@ -51,7 +51,7 @@ Linux kernel version: 3.13 and 3.14
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>Run the install.sh file in terminal :</p>
+<p>Give the install.sh file execution permission and run it in terminal :</p>
 
 <pre><code>./install.sh
 </code></pre>
