--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ Linux kernel version: 3.13 and 3.14
 
 <p>The driver will automatically load at startup.... </p>
       </section>
-    </div>
-
+    </div><br>
+<p>The official source package can be found <a href="http://www.mediatek.com/en/downloads/mt7630-pcie/">here</a></p>
     
   </body>
 </html>
