--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@ Linux kernel version: 3.13 and 3.14
 
 <p>Put your password and wait to finish the process</p>
 
-<p>The driver will automatically load at startup.... </p>
+<p>The driver will automatically load at startup.... </p><br>
+<p>The official source package can be found <a href="http://www.mediatek.com/en/downloads/mt7630-pcie/">here</a></p>
       </section>
     </div><br>
-<p align="center">The official source package can be found <a href="http://www.mediatek.com/en/downloads/mt7630-pcie/">here</a></p>
+
     
   </body>
 </html>
