--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Linux kernel version: 3.13 and 3.14
 <p>The driver will automatically load at startup.... </p><br>
 <p>The official source package can be found <a href="http://www.mediatek.com/en/downloads/mt7630-pcie/">here</a></p>
       </section>
+      <h3> <a href="https://www.facebook.com/pages/JCode/1513497505602572"><font color="#1a1ad2">Find
+On Facebook</font></a></h3>
     </div><br>
 
     
