--- a/index.html
+++ b/index.html
@@ -64,7 +64,16 @@ Linux kernel version: 3.13 and 3.14
       <h3> <a href="https://www.facebook.com/pages/JCode/1513497505602572"><font color="#1a1ad2">Find
 On Facebook</font></a></h3>
     </div><br>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- autoadd -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7231056961514186"
+     data-ad-slot="4317042955"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     
   </body>
 </html>
