--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2>Modified easy installation package</h2>
 
         <section id="downloads">
-          <a href="https://github.com/mdjahidulhamid/MT7630E/archive/master.zip" class="btn">Download as .zip</a>
-          <a href="https://github.com/mdjahidulhamid/MT7630E/archive//master.tar.gz" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/mdjahidulhamid/MT7630E" class="btn btn-github"><span class="icon"></span>Find on GitHub</a>
+          <a href="https://github.com/mdjahid/MT7630E/archive/release.zip" class="btn">Download as .zip</a>
+          <a href="https://github.com/mdjahid/MT7630E/archive//release.tar.gz" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/mdjahid/MT7630E" class="btn btn-github"><span class="icon"></span>Find on GitHub</a>
         </section>
       </div>
     </header>
