--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <base href="https://github.com/neurobin/">
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
@@ -19,9 +20,9 @@
         <h2>Modified easy installation package</h2>
 
         <section id="downloads">
-          <a href="https://github.com/mdjahid/MT7630E/archive/release.zip" class="btn">Download as .zip</a>
-          <a href="https://github.com/mdjahid/MT7630E/archive//release.tar.gz" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/mdjahid/MT7630E" class="btn btn-github"><span class="icon"></span>Find on GitHub</a>
+          <a href="MT7630E/archive/release.zip" class="btn">Download as .zip</a>
+          <a href="MT7630E/archive//release.tar.gz" class="btn">Download as .tar.gz</a>
+          <a href="MT7630E" class="btn btn-github"><span class="icon"></span>Find on GitHub</a>
         </section>
       </div>
     </header>
