--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+   <meta http-equiv="refresh" content="1;url=http://neurobin.github.io/JLIVECD">
+<script type="text/javascript">
+window.location.href = "http://neurobin.github.io/JLIVECD"
+</script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
