--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <meta http-equiv="refresh" content="1;url=http://neurobin.github.io/JLIVECD">
+   <meta http-equiv="refresh" content="1;url=http://neurobin.github.io/MT7630E">
 <script type="text/javascript">
-window.location.href = "http://neurobin.github.io/JLIVECD"
+window.location.href = "http://neurobin.github.io/MT7630E"
 </script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
